<resources>
    <string name="app_name">Flo</string>

    <string name="error">ERROR</string>

    <string name="login_debug">MVVM_TEST</string>
    <string name="list">list</string>
    <string name="language">TR-tr</string>
    <string name="data">data</string>
    <string name="loggedUser">user</string>

    <string name="network_internet">Internet</string>
    <string name="network_check_cellular">NetworkCapabilities.TRANSPORT_CELLULAR</string>
    <string name="network_check_wifi">NetworkCapabilities.TRANSPORT_WIFI</string>
    <string name="network_check_ethernet">NetworkCapabilities.TRANSPORT_ETHERNET</string>

    <string name="internet_dialog_header">İnternet Bağlantınız Yok</string>
    <string name="internet_dialog_message">Uygulamayı kullanmak için intenete bağlanın</string>
    <string name="internet_dialog_positive">İNTERNETİ Aç</string>
    <string name="internet_dialog_negative">KAPAT</string>

    <string name="quit_dialog_header">Çıkış</string>
    <string name="quit_dialog_message">Uygulamadan çıkmak istediğinize emin misiniz?</string>
    <string name="quit_dialog_positive">İptal</string>
    <string name="quit_dialog_negative">ÇIKIŞ YAP</string>

    <string name="log_email_edittext_hint">E-Posta Adresi</string>
    <string name="log_password_edittext_hint">Şifre</string>
    <string name="log_button_placeholder">GİRİŞ YAP</string>

    <string name="category_welcome">Hoşgeldiniz</string>

    <string name="list_header">Ürünler</string>
    <string name="list_list_type">Sırala</string>

    <string name="category_searchview">Ara</string>

    <string name="details_product">Ürün Açıklaması</string>
    <string name="details_product_inside">İç Materyal:</string>
    <string name="details_product_outside">Dış Materyal:</string>
    <string name="details_product_sole">Taban:</string>
    <string name="details_product_close_style">Kapanma Şekli:</string>

    <string name="details_product_info">Ürün Özellikleri</string>
    <string name="details_product_brand">Marka</string>
    <string name="details_product_gender">Cinsiyet</string>
    <string name="details_product_sku">SKU</string>
    <string name="details_product_modal">Model</string>
    <string name="details_product_color">Renk</string>
    <string name="details_product_saya">Saya Malzeme</string>

    <string name="list_button_change">DEĞİŞTİR</string>

    <string name="loading">Yükleniyor…</string>
    <string name="wrong_pass_title">Şifre hatalı!</string>
    <string name="wrong_pass_message">Email ve şifre uyuşmuyor!</string>
    <string name="wrong_pass_neg_button">KAPAT</string>

    <string name="sort_alert_title">Sırala</string>
    <string name="sort_alert_sort">İsme göre artan</string>
    <string name="sort_alert_descending_sort">İsme göre azalan</string>

    <string name="log_alert_empty_places_title">Lütfen alanları doldurun!</string>
    <string name="log_alert_empty_places_message">Email yada şifre boş!</string>
    <string name="log_alert_empty_places_neg_button">KAPAT</string>
    <string name="list_vertical_view_text">Dikey Görünüm</string>
    <string name="list_grid_view_text">Karesel Görünüm</string>

    <string name="list_recyclerview_state_grid">Çoklu Listeleme</string>
    <string name="list_recyclerview_state_vertical">Dikey Listeleme</string>
</resources>