<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/details_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_info"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="488dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_gender"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="575dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_color"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="578dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_brand"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="530dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_modal"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="530dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_saya"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="618dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_sku"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="618dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_inside"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="327dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_outside"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_sole"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_product_close_style"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="419dp" />

</androidx.constraintlayout.widget.ConstraintLayout>