<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListActivity">

    <TextView
        android:id="@+id/productsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_products_mar_top"
        android:text="@string/list_header"
        android:textSize="@dimen/list_products_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerview"
        android:layout_width="@dimen/list_rcrler_width"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/list_rcrler_mar_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortButton"
        tools:listitem="@layout/list_card_view" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="@dimen/list_sortbutton_width"
        android:layout_height="@dimen/list_sortbutton_height"
        android:layout_marginStart="@dimen/list_sortbutton_mar_start"
        android:layout_marginTop="@dimen/list_sortbutton_mar_top"
        android:background="@drawable/login_button"
        android:text="@string/list_list_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsTextView" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="@dimen/list_gif_width"
        android:layout_height="@dimen/list_gif_height"
        android:layout_marginTop="@dimen/list_gif_mar_top"
        android:layout_marginEnd="@dimen/list_gif_mar_end"
        android:src="@drawable/flo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/changeRcyclerViewSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_rcryclerview_change_switch_mar_start"
        app:layout_constraintBottom_toBottomOf="@+id/sortButton"
        app:layout_constraintStart_toEndOf="@+id/sortButton"
        app:layout_constraintTop_toTopOf="@+id/sortButton"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/recyclerViewStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_recyclerview_state_grid"
        app:layout_constraintBottom_toTopOf="@+id/changeRcyclerViewSwitch"
        app:layout_constraintEnd_toEndOf="@+id/changeRcyclerViewSwitch"
        app:layout_constraintStart_toStartOf="@+id/changeRcyclerViewSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>